2008-03-07 Fred Gleason <fredg@paravelsystems.com>
	* Added 'get_target.sh', 'get_distro.sh' and 'acinclude.m4' files.
	* Updated 'audiodir.spec'in' to use the 'License:' tag.
2008-03-07 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.3.1.
2008-03-07 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'Makefile.am' that was causing a corrupt RPM to
	be built for the x86_64 architecture.
2008-03-07 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.3.2.
2009-12-23 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs in 'filelist.cpp' and 'audiodir.cpp' that broke the
	build under OpenSuSE 11.1.
2009-12-23 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.3.3.
2014-08-19 Fred Gleason <fredg@paravelsystems.com>
	* Renamed 'configure.in' to 'configure.ac'.
	* Modernized the invocations of AM_INIT() and AC_INIT()
	in 'configure.ac'.
	* Amalgamated $INCLUDES into $AM_CPPFLAGS in 'Makefile.am'.
	* Modified includes to be compliant with TagLib v1.8.
	* Cleaned up warnings in 'cgilib.cpp', 'cgilib.h', 'conflib.cpp',
	and 'conflib.h'.
2014-08-19 Fred Gleason <fredg@paravelsystems.com>
	* Added a call to AM_SILENT_RULES() in 'configure.ac'.
2014-08-19 Fred Gleason <fredg@paravelsystems.com>
	* Modified 'Makefile.am' to use the location specified by the
	'--libexecdir=' switch to 'configure' to specify installation
	location of the script.
2014-08-19 Fred Gleason <fredg@paravelsystems.com>
	* Cleaned up warnings in 'cgilib.cpp', 'conflib.cpp' and
	'filelist.cpp'.
2014-08-19 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'README'.
	* Renamed 'audiodir.conf' to 'audiodir.conf-sample'.
2014-08-19 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.4.0.
2014-08-19 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'README'.
2014-09-25 Fred Gleason <fredg@paravelsystems.com>
	* Implemented an '--enable-static' switch for './configure'.