@@ -63,6 +63,7 @@ fi
 %defattr(-,root,root)
 @libexecdir@/audiodir.cgi
 %doc audiodir.conf-sample
+%doc audiotest.shtml
 %doc AUTHORS
 %doc ChangeLog
 %doc COPYING
